Change: Storing again each elementype complete data doc:<id>:element:token|lemma|...:<element-id> => hash of values.  * So that each item can be queries individually.

--- a/pom.xml
+++ b/pom.xml
@@ -20,4 +20,12 @@
             </plugin>
         </plugins>
     </build>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.graphql-java</groupId>
+            <artifactId>graphql-java</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+    </dependencies>
 </project>
